--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "betterpinger",
-  "version": "2.0.3",
+  "version": "github-release",
   "description": "A better solution for uptime by doing polling for server & client",
   "main": "./lib",
   "scripts": {
